@@ -1,3 +1,11 @@
+2003-02-02  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S
+	(__lll_lock_wait): Add branch predicition.
+	* sysdeps/unix/sysv/linux/i386/i486/libc-lowlevellock.S
+	(__lll_lock_wait): Likewise.
+	(lll_unlock_wake_cb): Removed.
+
 2003-01-31  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Remove
